fix(game): correctifs de la transition des états et optimisation de la gestion des Loups. Fix de l'écran de vote